# realworld-rust-axum-leptos

./: .gitignore  MIGRATION_GUIDE.md  MIGRATION_PROGRESS.md  Makefile  REFACTOR_COMPLETE.md  STATUS.md  WIRING_GUIDE.md  cargo.toml
.github/instructions/: api-specs.instructions.md  rust.instructions.md  workflows.instructions.md
apps/api/: Cargo.toml  ERROR_HANDLING.md
apps/api/src/: auth.rs  error.rs  main.rs
apps/api/src/routes/: mod.rs
apps/api/src/routes/api/: articles.rs  current_user.rs  mod.rs  profiles.rs  tags.rs  users.rs
apps/api/src/state/: mod.rs
apps/grpc/: Cargo.toml  build.rs
config/api/: base.toml  local.toml
crates/authz/: Cargo.toml
crates/authz/src/: lib.rs
crates/common-config/: Cargo.toml
crates/common-config/src/: lib.rs
crates/data/: Cargo.toml
crates/data/clorinde/src/queries/: comments.rs  users.rs
crates/data/migrations/: 20231130075614_user.down.sql  20231130075614_user.sql  20231130075614_user.up.sql  20231130094514_article.down.sql  20231130094514_article.sql  20231130094514_article.up.sql
crates/data/queries/: articles.sql  comments.sql  users.sql
crates/data/src/: Cargo.toml  lib.rs  repositories.rs
crates/data/src/clorinde/: queries.rs  type_traits.rs
crates/data/src/clorinde/queries/: articles.rs  comments.rs  users.rs
crates/data/src/src/queries/: articles.rs
crates/data/tests/: README.md  integration_test.rs
crates/domain/: Cargo.toml
crates/domain/src/: article.rs  comment.rs  errors.rs  identifiers.rs  lib.rs  pagination.rs  profile.rs  services.rs  tags.rs  user.rs
crates/domain/src/repositories/: in_memory.rs  mod.rs
crates/domain/src/use_cases/: mod.rs
crates/domain/src/use_cases/articles/: create_article.rs  delete_article.rs  favorite_article.rs  feed_articles.rs  get_article.rs  list_articles.rs  mod.rs  unfavorite_article.rs  update_article.rs
crates/domain/src/use_cases/comments/: create_comment.rs  delete_comment.rs  list_comments.rs  mod.rs
crates/domain/src/use_cases/profiles/: follow_user.rs  get_profile.rs  mod.rs  unfollow_user.rs
crates/domain/src/use_cases/users/: get_current_user.rs  login_user.rs  mod.rs  register_user.rs  update_user.rs
crates/http-problem/: Cargo.toml
crates/http-problem/src/: lib.rs
crates/messaging/: Cargo.toml
crates/messaging/src/: lib.rs
crates/security/: Cargo.toml
crates/security/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: config.rs  lib.rs
crates/workflow/: Cargo.toml
crates/workflow/src/: lib.rs
infra/local/: base.yaml  otel-collector-config.yaml  otel-proxy
