[package]
name = "authz"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
common-config = { path = "../common-config" }
moka = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
