[package]
name = "common-config"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
telemetry = { path = "../telemetry" }