[package]
name = "security"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
common-config = { path = "../common-config" }
ed25519-dalek = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
http-problem = { path = "../http-problem" }
chrono = { workspace = true }
