[package]
name = "telemetry"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
common-config = { path = "../common-config" }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
